--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-parallax": "^3.5.1",
+    "react-scroll-parallax": "^3.4.5",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
   },
