--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "framer-motion": "^12.0.6",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
+    "react-phone-input-2": "^2.15.1",
     "react-scroll-parallax": "^3.4.5",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
