--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -19,12 +20,14 @@
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.475.0",
     "next": "^15.1.5",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-phone-input-2": "^2.15.1",
     "react-scroll-parallax": "^3.4.5",
+    "resend": "^4.7.0",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
   },
